analysis/spring-framework/step_1/logs/11922-8059625.log
OpenJDK 64-Bit Server VM warning: ignoring option MaxPermSize=1024m; support was removed in 8.0
:assemble
:build
:spring-core:asmRepackJar
:spring-core:cglibRepackJar
:spring-core:compileJavaNote: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.

:spring-core:processResources UP-TO-DATE
:spring-core:classes
:spring-core:jar
:spring-beans:compileJavaNote: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.

:spring-beans:processResources
:spring-beans:classes
:spring-beans:jar
:spring-aop:compileJavaNote: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.

:spring-aop:processResources
:spring-aop:classes
:spring-aop:jar
:spring-aop:sourcesJar
:spring-aop:assemble
:spring-aop:build
:spring-aspects:processResources
:spring-expression:compileJava
:spring-expression:processResources UP-TO-DATE
:spring-expression:classes
:spring-expression:jar
:spring-instrument:compileJava
:spring-instrument:processResources UP-TO-DATE
:spring-instrument:classes
:spring-instrument:jar
:spring-context:compileJavaNote: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.

:spring-context:processResources
:spring-context:classes
:spring-context:jar
:spring-tx:compileJavaNote: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.

:spring-tx:processResources
:spring-tx:classes
:spring-tx:jar
:spring-jdbc:compileJava/home/ubuntu/bugs/spring-framework/spring-jdbc/src/main/java/org/springframework/jdbc/core/SqlRowSetResultSetExtractor.java:24: warning: CachedRowSetImpl is internal proprietary API and may be removed in a future release
import com.sun.rowset.CachedRowSetImpl;
                     ^
/home/ubuntu/bugs/spring-framework/spring-jdbc/src/main/java/org/springframework/jdbc/core/SqlRowSetResultSetExtractor.java:104: warning: CachedRowSetImpl is internal proprietary API and may be removed in a future release
			return new CachedRowSetImpl();
			           ^
/home/ubuntu/bugs/spring-framework/spring-jdbc/src/main/java/org/springframework/jdbc/datasource/embedded/EmbeddedDatabaseFactory.java:167: error: EmbeddedDatabaseFactory.EmbeddedDataSourceProxy is not abstract and does not override abstract method getParentLogger() in CommonDataSource
	private class EmbeddedDataSourceProxy implements EmbeddedDatabase {
	        ^
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error
2 warnings


FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':spring-jdbc:compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output.

BUILD FAILED

Total time: 23.684 secs
